--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@ Expected Output Format
 0 1 1 0
 0 0 0 0
 ```
+
+<center><b>FAQ:</b></center>
+Go to anybody from GO-JEK and they will direct you.
   </pre>
   </div>
 </body>
