--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
 11. Unit tests are mandatory. TDD is a huge plus.
 
 
-  <center><b>Constraints for the problem:</b></center>
+  <center><b>Bonus Challenges:</b></center>
 
-Your submission must adhere to at least one of the following constraints. The more contstraints that are implemented, the more likely you are to win.
+For each of the bonus challenges below that you complete in your solution, you get a massive boost to your score.
 
-Please mention which constraints you have implemented in the README file in your project root.
+Please mention which challenges you have tackled in the README file in your project root among 'immutable', 'no if', 'no loop'.
 
-1. Your solution uses a maximum of immutable objects. The ideal is 0 mutating references in the entire codebase.
+1. Immutable: Your solution maximises use of immutable objects. The ideal is 0 mutating references in the entire codebase.
 
-2. Your solution does not use conditionals. Please note that hacking this by using a hash or ternary operator does not count, as one example.
+2. No if: Your solution does not use a single conditional. Please note that 'hacking' this by using a hash or ternary operator does not count, as one example.
 
-3. Your solution does not use looping constructs.
+3. No loop: Your solution does not use looping constructs.
   
   <center><b>How to enter:</b></center>
 
@@ -104,8 +104,8 @@ Expected Output Format
 0 0 0 0
 ```
 
-<center><b>FAQ:</b></center>
-Go to anybody from GO-JEK and they will direct you.
+<center><b>Support:</b></center>
+Go to anyone at the conference from GO-JEK and they will direct you to somebody who can answer your questions. You can also tweet to <a href="https://twitter.com/ponnappa">@ponnappa</a>, <a href="https://twitter.com/AjeyGore">@ajeygore</a>, <a href="https://twitter.com/niranjan_p">@niranjan_p</a> or <a href="https://twitter.com/aakashd">@aakashd</a>
   </pre>
   </div>
 </body>
