Clarifying rule on non-usage of external gems to solve any part of the problem

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 3. Your solution should be a command line application with a standard project structure expected in Ruby.
 
-4. Usage of gems/libs is only for your specs eg. Test::Unit, RSpec, FactoryGirl etc.
+4. Usage of external gems/libs is only permitted for your specs eg. Test::Unit, RSpec, FactoryGirl etc.
 
 5. Contract for your solution 
   
