--- a/index.html
+++ b/index.html
@@ -24,23 +24,22 @@
     <title>Gojek Engineering</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row top-nav">
-        <img  src="assets/images/logo.png" class="img-responsive center-block" alt="Responsive image">
-     </div>
-
-      <div class="row text-center">
-        <div class="status">
-         <p>STAY CURIOUS <i class="fa fa-smile-o"></i> OUR WEBSITE IS</p>
-        </div>
-        <div class="coming-soon">
-          <p>COMING SOON</p>
-        </div>
+    <header class="logo">
+      <img  src="assets/images/logo.svg" class="img-responsive center-block" alt="Responsive image">
+    </header>
+    <div class="row mid-statement text-center">
+      <div class="status">
+        <p>STAY CURIOUS <i class="fa fa-smile-o"></i> OUR WEBSITE IS</p>
       </div>
-      <div class="row footer text-center">
-        <p>test</p>
+      <div class="coming-soon">
+        <p>COMING SOON</p>
       </div>
     </div>
+    <footer class="footer navbar-bottom footer-text text-center">
+      <div class="container">
+        <p>#RubyConfIndia visitors, contest details are here</p>
+      </div>
+    </footer>
   </body>
 </html>
 
