added raleway font for footer text and link hover

--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
         <p>COMING SOON</p>
       </div>
     </div>
-    <footer class="footer navbar-bottom footer-text text-center">
-      <div class="container">
-        <p>#RubyConfIndia visitors, contest details are here</p>
-      </div>
+    <footer class="footer navbar-fixed-bottom footer-text text-center">
+      <p>#RubyConfIndia visitors, contest details are <a href="#">here</a></p>
     </footer>
   </body>
 </html>
