Adding navbar list

--- a/contest.html
+++ b/contest.html
@@ -25,13 +25,20 @@
     <title>Gojek Engineering</title>
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
+    <nav class="navbar navbar-default" id="navbar-custom">
+      <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            <img alt="Brand" src="assets/images/logo.svg">
-          </a>
+          <img src="assets/images/logo.svg" id="logo" class="img-responsive navbar-brand" alt="Responsive image">
         </div>
+        <div class="collapse navbar-collapse navbar-right" id="list-tabs">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">#RUBYCONFINDIA CONTEST</a></li>
+            <li><a href="#">GAME</a></li>
+            <li><a href="#">RULES</a></li>
+            <li><a href="#">REWARDS</a></li>
+            <li><a href="#">HOW TO ENTER</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
       </div>
     </nav>
 
