--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
   </style>
 
   <title>Gojek Engineering</title>
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-75323807-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 </head>
 <body>
   <div class="container">
@@ -83,7 +93,7 @@ Please mention which challenges you have tackled in the README file in your proj
 
 2. Please tweet a link to the Github url of your project with the #GojekIndia #RubyConfIndia hashtags before 9:00am Sunday.
 
-    Like -> My Game of Life solution: `https://github.com/kaiwren/gameofliferb #RubyConfIndia
+    Like -> My Game of Life solution: https://github.com/kaiwren/gameofliferb #RubyConfIndia
             #GojekIndia
 
 
