Adding latest content

--- a/contest.html
+++ b/contest.html
@@ -46,8 +46,20 @@
       At RubyConf India 2016, Go-Jek Engineering is running a programming contest to find & reward the sharpest coders in the crowd.<br /><br />Read on to learn more about the challenge & see if you can hack it.
     </div>
 
-    <div class='col-md-offset-2 col-md-8 wrapper'>
-      <h2 class="wrapper-heading">The Game</h2>
+    <div class='col-md-offset-2 col-md-8 wrapper' id="wrapper-abstract">
+      <h2 class="wrapper-heading">Abstract</h2>
+      <hr class='wrapper-heading-bottom' />
+      Implement Conway's Game of Life as a command line solution in Ruby.
+    </div>
+
+    <div class='col-md-offset-2 col-md-8 wrapper' id="wrapper-prize">
+      <h2 class="wrapper-heading">Prize</h2>
+      <hr class='wrapper-heading-bottom' />
+      3 iPad minis for the top 3 code submissions.
+    </div>
+
+    <div class='col-md-offset-2 col-md-8 wrapper' id="wrapper-rules">
+      <h2 class="wrapper-heading">The Rules</h2>
       <hr class='wrapper-heading-bottom' />
       <ol class="content-list">
         <li>You have until 9:00am on Sunday (i.e 24 hours from announcement) to submit your solution.</li>
@@ -79,30 +91,55 @@
       </ol>
     </div>
 
-    <div class='col-md-offset-2 col-md-8 wrapper' id="wrapper-rules">
-      <h2 class="wrapper-heading">The Rules</h2>
-      <hr class='wrapper-heading-bottom' />      
-      <p class="content">
-        Here’s what you need to do:<br />
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidi- dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci- tation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-      </p>
+    <div class='col-md-offset-2 col-md-8 wrapper' id="wrapper-bonus-challenges">
+      <h2 class="wrapper-heading">Bonus Challenges</h2>
+      <hr class='wrapper-heading-bottom' />
+      For each of the bonus challenges below that you complete in your solution, you get a massive boost to your score.
+      Please mention which challenges you have tackled in the README file in your project root among 'immutable', 'no if', 'no loop'.
+      <ol class="content-list">
+        <li>Immutable: Your solution maximises use of immutable objects. The ideal is 0 mutating references in the entire codebase.</li>
+        <li>No if: Your solution does not use a single conditional. Please note that 'hacking' this by using a hash or ternary operator does not count, as one example.</li>
+        <li>No loop: Your solution does not use looping constructs.</li>
+      </ol>
     </div>
 
-    <div class='col-md-offset-2 col-md-8 wrapper' id="wrapper-rewards">
-      <h2 class="wrapper-heading">The Rewards</h2>
-      <hr class='wrapper-heading-bottom' />      
-      <p class="content">
-        Here’s what you can win:<br />
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incidi- dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerci- tation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </p>
+    <div class='col-md-offset-2 col-md-8 wrapper' id="wrapper-entry">
+      <h2 class="wrapper-heading">How To Enter</h2>
+      <hr class='wrapper-heading-bottom' />
+      <ol class="content-list">
+        <li>Your solution should be published on github.com under your github account as a new project.</li>
+        <li>Please tweet the link to the Github url of your project with the #GojekIndia #RubyConfIndia hashtags before 9:00am Sunday.</li>
+        <li>No loop: Your solution does not use looping constructs.<br />
+        Like -> <pre style="display: inline; position: relative; bottom: 5px;">My Game of Life solution: https://github.com/kaiwren/gameofliferb #RubyConfIndia #GojekIndia</pre><br />
+        
+        <br />
+        <h3>Sample Input Format (made available as a file)</h3>
+        ```<br />
+          0&nbsp;0&nbsp;0&nbsp;0<br />
+          0&nbsp;1&nbsp;1&nbsp;0<br />
+          0&nbsp;1&nbsp;1&nbsp;0<br />
+          0&nbsp;0&nbsp;0&nbsp;0<br />
+        ```
+        <br>
+        <h3>Expected Output Format</h3>
+
+        ```<br />
+          0&nbsp;0&nbsp;0&nbsp;0<br />
+          0&nbsp;1&nbsp;1&nbsp;0<br />
+          0&nbsp;1&nbsp;1&nbsp;0<br />
+          0&nbsp;0&nbsp;0&nbsp;0<br />
+        ```
+        </pre>
+        </li>
+      </ol>
     </div>
 
-    <div class="col-md-12" id="wrapper-entry">
+    <div class="col-md-12" id="wrapper-support">
       <div class='col-md-offset-2 col-md-8 wrapper'>
       <h2 class="wrapper-heading">How To Enter</h2>
       <hr class='wrapper-heading-bottom' />      
-      <p class="content">
-        Email your code entries to rubyconfindia@go-jek.com We will announce the winners after Sunday’s keynote talk.
+      <p class="content">      
+      Go to anyone at the conference from GO-JEK and they will direct you to somebody who can answer your questions. You can also tweet to @ponnappa, @ajeygore, @niranjan_p or @aakashd
       </p>
     </div>
     </div>
