Removing overflowing items from navbar

--- a/contest.html
+++ b/contest.html
@@ -33,10 +33,9 @@
         <div class="collapse navbar-collapse navbar-right" id="list-tabs">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">#RUBYCONFINDIA CONTEST</a></li>
-            <li><a href="#">GAME</a></li>
-            <li><a href="#">RULES</a></li>
-            <li><a href="#">REWARDS</a></li>
-            <li><a href="#">HOW TO ENTER</a></li>
+            <li><a href="#wrapper-rules">RULES</a></li>
+            <li><a href="#wrapper-bonus-challenges">BONUS CHALLENGES</a></li>
+            <li><a href="#wrapper-entry">HOW TO ENTER</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
