Adding contest heading

--- a/contest.html
+++ b/contest.html
@@ -135,7 +135,7 @@
 
     <div class="col-md-12" id="wrapper-support">
       <div class='col-md-offset-2 col-md-8 wrapper'>
-      <h2 class="wrapper-heading">How To Enter</h2>
+      <h2 class="wrapper-heading">Support</h2>
       <hr class='wrapper-heading-bottom' />      
       <p class="content">      
       Go to anyone at the conference from GO-JEK and they will direct you to somebody who can answer your questions. You can also tweet to @ponnappa, @ajeygore, @niranjan_p or @aakashd
