Adding about Go-Jek

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 <center><b>GO-JEK Game Of Life Challenge</b></center>
 <center>2016-03-19 09:00:00 +05:30</center>
 
+<center><b>About GO-JEK</b></center>
+
+GO-JEK is Indonesia's larget startup with > 11M app downloads since launch in Jan 2015. It is also the fastest growing startup in the world outside of China, posting 900x MoM growth since launch.
+
+GO-JEK has recently <a href="http://asia.nikkei.com/Business/Deals/Motorcycle-app-acquires-Indian-software-companies">set up an R&D centre</a> in Bangalore, India, and is <a href="https://hasjob.co/go-jek.com/xt7n5">looking to hire the best hackers</a> in the country.
+
 <center><b>Abstract:</b></center>
 Implement <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's Game of Life</a> as a command line solution in Ruby.
   
@@ -120,4 +126,3 @@ Go to anyone at the conference from GO-JEK and they will direct you to somebody 
   </pre>
   </div>
 </body>
-
