--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <center><b>About GO-JEK</b></center>
 
-GO-JEK is Indonesia's larget startup with > 11M app downloads since launch in Jan 2015. It is also the fastest growing startup in the world outside of China, posting 900x MoM growth since launch.
+GO-JEK is Indonesia's largest startup with > 11M app downloads since launch in Jan 2015. It is also the fastest growing startup in the world outside of China, posting 900x MoM growth since launch.
 
 GO-JEK has recently <a href="http://asia.nikkei.com/Business/Deals/Motorcycle-app-acquires-Indian-software-companies">set up an R&D centre</a> in Bangalore, India, and is <a href="https://hasjob.co/go-jek.com/xt7n5">looking to hire the best hackers</a> in the country.
 
