--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
   <title>Gojek Engineering</title>
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-75323807-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-80421053-1', 'auto');
+    ga('send', 'pageview');
 
   </script>
-</head>
+  </head>
 <body>
   <div class="container">
   <pre width="800">
@@ -37,6 +37,7 @@ GO-JEK is Indonesia's largest startup with > 19M app downloads since launch in J
 GO-JEK has recently <a href="http://asia.nikkei.com/Business/Deals/Motorcycle-app-acquires-Indian-software-companies">set up an R&D centre</a> in Bangalore, India, and is <a href="https://hasjob.co/go-jek.com/xt7n5">looking to hire the best hackers</a> across India and Indonesia.
 
 GO-JEK's engineering team is present in three cities now: Jakarta and Jogjakarta in Indonesia, and Bangalore in India.
-
+</pre>
+<center width="600"><a class="twitter-timeline" href="https://twitter.com/GojekTech">Tweets by GojekTech</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
 </body>
 </html>
