Link to the section What is a Hacker in ESR's post (rather than the top)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 GO-JEK is Indonesia's largest startup with > 19M app downloads since launch in Jan 2015. It is also the fastest growing startup in the world outside of China, posting 900x MoM growth since launch.
 
-GO-JEK has recently <a href="http://asia.nikkei.com/Business/Deals/Motorcycle-app-acquires-Indian-software-companies">set up an R&D centre</a> in Bangalore, India, and is <a href="https://hasjob.co/go-jek.com/xt7n5">looking to hire</a> the best <a href="http://www.catb.org/esr/faqs/hacker-howto.html">hackers</a> across India and Indonesia.
+GO-JEK has recently <a href="http://asia.nikkei.com/Business/Deals/Motorcycle-app-acquires-Indian-software-companies">set up an R&D centre</a> in Bangalore, India, and is <a href="https://hasjob.co/go-jek.com/xt7n5">looking to hire</a> the best <a href="http://www.catb.org/esr/faqs/hacker-howto.html#what_is">hackers</a> across India and Indonesia.
 
 GO-JEK's engineering team is present in three cities now: Jakarta and Jogjakarta in Indonesia, and Bangalore in India.
 </pre>
