Resizing and centring tweets

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@ GO-JEK has recently <a href="http://asia.nikkei.com/Business/Deals/Motorcycle-ap
 
 GO-JEK's engineering team is present in three cities now: Jakarta and Jogjakarta in Indonesia, and Bangalore in India.
 </pre>
-<center width="600"><a class="twitter-timeline" href="https://twitter.com/GojekTech">Tweets by GojekTech</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+<center>
+  <div style="width: 500px">
+    <a class="twitter-timeline" href="https://twitter.com/GojekTech">Tweets by GojekTech</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+  </div>
+</center>
 </body>
 </html>
