hyperlinking to GO-JEK main website

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <center><b><a href="https://twitter.com/gojektech" class="twitter-follow-button" data-show-count="false">Follow @gojektech</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
 <center><b>About GO-JEK</b></center>
 
-GO-JEK is Indonesia's largest startup with > 19M app downloads since launch in Jan 2015. It is also the fastest growing startup in the world outside of China, posting 900x MoM growth since launch.
+<a href="http://go-jek.com">GO-JEK</a> is Indonesia's largest startup with > 19M app downloads since launch in Jan 2015. It is also the fastest growing startup in the world outside of China, posting 900x MoM growth since launch.
 
 GO-JEK has recently <a href="http://asia.nikkei.com/Business/Deals/Motorcycle-app-acquires-Indian-software-companies">set up an R&D centre</a> in Bangalore, India, and is <a href="https://hasjob.co/go-jek.com/xt7n5">looking to hire</a> the best <a href="http://www.catb.org/esr/faqs/hacker-howto.html#what_is">hackers</a> across India and Indonesia.
 
