--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
-  <style>
-  pre{
-      white-space: pre-wrap;
-  }
-  .container{
-    font-family: 'Source Code Pro', ;
-    width: 800px; 
-    margin: 30px auto;
-  }
-  </style>
-
-  <title>Gojek Engineering</title>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
+    <link href='assets/css/index.css' rel='stylesheet'>
+    <title>Gojek Engineering</title>
+    <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-75323807-1', 'auto');
-  ga('send', 'pageview');
+ga('create', 'UA-75323807-1', 'auto');
+ga('send', 'pageview');
 
-  </script>
-</head>
-<body>
-  <div class="container">
-  <pre width="800">
-
-<center><b><a href="https://twitter.com/gojektech" class="twitter-follow-button" data-show-count="false">Follow @gojektech</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></center>
-<center><b>About GO-JEK</b></center>
-
-GO-JEK is Indonesia's largest startup with > 19M app downloads since launch in Jan 2015. It is also the fastest growing startup in the world outside of China, posting 900x MoM growth since launch.
-
-GO-JEK has recently <a href="http://asia.nikkei.com/Business/Deals/Motorcycle-app-acquires-Indian-software-companies">set up an R&D centre</a> in Bangalore, India, and is <a href="https://hasjob.co/go-jek.com/xt7n5">looking to hire the best hackers</a> in the country.
-
-GO-JEK's engineering team is present in three cities now: Jakarta and Jogjakarta in Indonesia, and Bangalore in India.
-
-</body>
+    </script>
+  </head>
+  <body>
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          </button>
+          <a class="navbar-brand" href="#">GO-JEK</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a class="top-download ios" href="https://goo.gl/htwDA4">
+              <img src="assets/images/badge-app-store.svg">
+              <div class="ripple-wrapper"></div>
+            </a>
+          </li>
+          <li>
+            <a class="top-download android" href="https://goo.gl/htwDA4">
+              <img src="assets/images/badge-google-play-bordered.png">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
+
