added featured on

--- a/index.html
+++ b/index.html
@@ -20,24 +20,30 @@ ga('send', 'pageview');
   <body>
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          </button>
-          <a class="navbar-brand" href="#">GO-JEK</a>
+        <div class="col-md-4 col-xs-2">
         </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a class="top-download ios" href="https://goo.gl/htwDA4">
-              <img src="assets/images/badge-app-store.svg">
-              <div class="ripple-wrapper"></div>
-            </a>
-          </li>
-          <li>
-            <a class="top-download android" href="https://goo.gl/htwDA4">
-              <img src="assets/images/badge-google-play-bordered.png">
-            </a>
-          </li>
-        </ul>
+        <div class="col-md-4 col-xs-2">
+          <h1 class="main-logo">GO-JEK</h1>
+          <h3 class="sub-text center-block">ENGINEERING</h3>
+        </div>
+        <div class="col-md-4 col-xs-2">
+          <ul class="nav navbar-nav nav-links">
+            <li>
+              <a href="work.html">WORK</a>
+            </li>
+            <li>
+              <a href="#">TEAM</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="top-separator">
+    </div>
+    <div class="container">
+      <h2 class="section-title">Featured on</h2>
+      <div class="logos">
+        <img class="large" src="assets/images/featured-logos.png" alt="GO-JEK was featured on">
       </div>
     </div>
   </body>
