Setup home-page with scroll down feature.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/todc-bootstrap.min.css" rel="stylesheet">
     <link href='assets/css/index.css' rel='stylesheet'>
-    <title>Gojek Engineering</title>
+    <title>GO-JEK Engineering</title>
     <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -38,8 +39,31 @@ ga('send', 'pageview');
         </div>
       </div>
     </div>
-    <div class="top-separator">
+    <div id="wrapper">
+      <div id="page-content-wrapper" style="padding-top: 0px;">
+        <div id="container" class="fp-content-container" style="height: 100%; position: relative;">
+          <div class="section relative fp-section fp-table active fp-completely" id="home03" style="height: 681px; padding-top: 65px;">
+	    <div class="fp-tableCell" style="height: 576px;">
+              <div class="wrapper abs"></div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-5 pull-right text-right obj up fadeInUp run_animation content-format" style="opacity: 1;">
+                      <p>
+                        GO-JEK is the largest consumer technology company in Indonesia, the world's 4th largest market by population. 
+                      <p>
+                        With over 20 million downloads, the GO-JEK app has become the leading transport, courier, and hyperlocal shopping app in the country.
+                      <p>
+                        GO-JEK is leading Indonesia's online revolution by bringing offline players to the mobile space with a powerful combination of logistics, payments and a one-stop-shop interface. It is the only company in the world of its kind, successfully integrating multiple business models into a single app and logistics network.
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
     <div class="container">
       <h2 class="section-title">Featured on</h2>
       <div class="logos">
