--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ ga('create', 'UA-75323807-1', 'auto');
 ga('send', 'pageview');
 
     </script>
+    <meta charset="utf-8">
   </head>
   <body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -35,6 +36,9 @@ ga('send', 'pageview');
             <li>
               <a href="#">TEAM</a>
             </li>
+            <li>
+              <a href="#">BLOG</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -42,7 +46,7 @@ ga('send', 'pageview');
     <div id="wrapper">
       <div id="page-content-wrapper" style="padding-top: 0px;">
         <div id="container" class="fp-content-container" style="height: 100%; position: relative;">
-          <div class="section relative fp-section fp-table active fp-completely" id="home03" style="height: 681px; padding-top: 65px;">
+          <div class="section relative fp-section fp-table active fp-completely" id="home1" style="height: 681px; padding-top: 65px;">
 	    <div class="fp-tableCell" style="height: 576px;">
               <div class="wrapper abs"></div>
               <div class="container">
@@ -52,6 +56,17 @@ ga('send', 'pageview');
                         GO-JEK is the largest consumer technology company in Indonesia, the world's 4th largest market by population. 
                       <p>
                         With over 20 million downloads, the GO-JEK app has become the leading transport, courier, and hyperlocal shopping app in the country.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="section relative fp-section fp-table active fp-completely" id="home2" style="height: 681px; padding-top: 65px;">
+	    <div class="fp-tableCell" style="height: 576px;">
+              <div class="wrapper abs"></div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-5 pull-left text-left obj up fadeInUp run_animation content-format" style="opacity: 1;">
                       <p>
                         GO-JEK is leading Indonesia's online revolution by bringing offline players to the mobile space with a powerful combination of logistics, payments and a one-stop-shop interface. It is the only company in the world of its kind, successfully integrating multiple business models into a single app and logistics network.
                     </div>
@@ -63,13 +78,53 @@ ga('send', 'pageview');
         </div>
       </div>
     </div>
-
     <div class="container">
       <h2 class="section-title">Featured on</h2>
       <div class="logos">
         <img class="large" src="assets/images/featured-logos.png" alt="GO-JEK was featured on">
       </div>
     </div>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2 footer-menu footer-logo">
+            <h1 class="main-logo">
+            <h3 class="sub-text center-block">ENGINEERING</h3>
+            </h1>
+          </div>
+          <div class="col-md-2 col-sm-3 col-xs-6 footer-menu">
+            <ul>
+              <li><a href="http://www.go-jek.com">Home</a></li>
+              <li><a href="http://www.go-jek.com/blog">Blog</a></li>
+              <li><a href="http://www.go-jek.com/contact">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
+            <ul>
+              <li>Find Us On</li>
+              <li><a href="https://twitter.com/GojekTech?lang=id" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
+            </ul>
+          </div>
+          <div class="col-md-2 col-sm-3 col-xs-6 footer-menu download">
+            <ul>
+              <li>Download GO-JEK App</li>
+              <li> 
+                <a href="https://itunes.apple.com/us/app/go-jek/id944875099?mt=8">
+                  <img src="/assets/images/badge-app-store.svg" height="36" width="120" alt="Download on the App Store">
+                </a>
+              </li>
+              <li> 
+                <a href="https://play.google.com/store/apps/details?id=com.gojek.app&hl=en">
+                  <img src="/assets/images/badge-google-play-bordered.png" height="36" width="120"  alt="Get it on Google Play">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">© Copyright 2016 GO-JEK Indonesia</div>
+    </footer>
+
   </body>
 </html>
 
