added investors list

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ ga('send', 'pageview');
               <a href="#">TEAM</a>
             </li>
             <li>
-              <a href="#">BLOG</a>
+              <a href="http://blog.gojekengineering.com/">BLOG</a>
             </li>
           </ul>
         </div>
@@ -52,6 +52,7 @@ ga('send', 'pageview');
               <div class="container">
                 <div class="row">
                   <div class="col-md-5 pull-right text-right obj up fadeInUp run_animation content-format" style="opacity: 1;">
+                      <h2 class="section-title1">GO-JEK ENGINEERING</h2>
                       <p>
                         GO-JEK is the largest consumer technology company in Indonesia, the world's 4th largest market by population. 
                       <p>
@@ -79,33 +80,39 @@ ga('send', 'pageview');
       </div>
     </div>
     <div class="container">
-      <h2 class="section-title">Featured on</h2>
+      <h2 class="section-title"><b>FEATURED ON</b></h2>
       <div class="logos">
         <img class="large" src="assets/images/featured-logos.png" alt="GO-JEK was featured on">
+      </div>
+    </div>
+    <div class="container">
+      <h2 class="section-title"><b>INVESTORS</b></h2>
+      <div class="logos">
+        <img class="large1" src="assets/images/sequoia-mark-full-grey.svg" >
       </div>
     </div>
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-2 footer-menu footer-logo">
+          <div class="col-md-3 footer-menu footer-logo">
             <h1 class="main-logo">
             <h3 class="sub-text center-block">ENGINEERING</h3>
             </h1>
           </div>
-          <div class="col-md-2 col-sm-3 col-xs-6 footer-menu">
+          <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
             <ul>
               <li><a href="http://www.go-jek.com">Home</a></li>
-              <li><a href="http://www.go-jek.com/blog">Blog</a></li>
+              <li><a href="http://blog.gojekengineering.com/">Blog</a></li>
               <li><a href="http://www.go-jek.com/contact">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6 footer-menu">
             <ul>
-              <li>Find Us On</li>
+              <li><i><b>Find Us On</b></i></li>
               <li><a href="https://twitter.com/GojekTech?lang=id" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
             </ul>
           </div>
-          <div class="col-md-2 col-sm-3 col-xs-6 footer-menu download">
+          <div class="col-md-3 col-sm-3 col-xs-6 footer-menu download">
             <ul>
               <li>Download GO-JEK App</li>
               <li> 
