--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@ ga('send', 'pageview');
         <div class="col-md-4 col-xs-2">
           <ul class="nav navbar-nav nav-links">
             <li>
-              <a href="work.html">WORK</a>
+              <a href="careers.html">CAREERS</a>
             </li>
+<!--
             <li>
               <a href="team.html">TEAM</a>
             </li>
+-->
             <li>
               <a href="http://blog.gojekengineering.com/">BLOG</a>
             </li>
@@ -43,6 +45,7 @@ ga('send', 'pageview');
         </div>
       </div>
     </div>
+    <div class="top-separator"></div>
     <div id="wrapper">
       <div id="page-content-wrapper" style="padding-top: 0px;">
         <div id="container" class="fp-content-container" style="height: 100%; position: relative;">
